# AttentionAlternatives

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: augmentation.py  data.py  get_test_scores.py  inference.py  inference_all_sets.py  model.py  poolings.py  settings.py  speech_feature_extractor.py  text_feature_extractor.py  train.py  utils.py
shs/calcula/: train.sh
shs/calcula/custom/: train_1.sh  train_2.sh  train_3.sh  train_4.sh
shs/mn5/: train.sh  train_emospeech.sh  train_tiny.sh
shs/mn5/attention_experiments/: fox.sh  gsa.sh  kda.sh  lightnet.sh  mamba2.sh  mamba2_official.sh  mha.sh  retnet.sh
shs/mn5/experiments/: 1a_baseline_msp.sh  1b_skip_connection_msp.sh  1c_linear_adapter_msp.sh  2a_baseline_emospeech.sh  2b_skip_connection_emospeech.sh  2c_linear_adapter_emospeech.sh
shs/mn5/inference_eval/: evaluate_all_sets.sh  evaluate_model.sh  evaluate_test.sh
utils/: data_augmentation_labels_generator.py  generate_transcripts.py  training_labels_generator.py  wandb_sync.py
utils/shs/: data_augmentation_labels_generator.sh  generate_transcripts.sh  training_labels_generator.sh
