[project]
name = "ser2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==1.2.1",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.8.0",
    "appdirs==1.4.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astropy==6.0.1",
    "astropy-iers-data==0.2025.1.13.0.34.51",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "async-timeout==5.0.1",
    "attrs==24.3.0",
    "audioread==3.0.1",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "blobfile==3.0.0",
    "causal-conv1d>=1.6.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.1.8",
    "cmake==4.0.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "datasets==3.2.0",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastjsonschema==2.21.1",
    "ffmpeg==1.4",
    "filelock==3.13.1",
    "flash-linear-attention>=0.4.0",
    "focal-loss-torch==0.1.2",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2024.2.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h11==0.14.0",
    "h5py==3.12.1",
    "hf-xet==1.2.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface==0.0.1",
    "huggingface-hub==0.36.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "importlib-resources==6.5.2",
    "ipdb==0.13.13",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "ipywidgets==8.1.5",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.3",
    "joblib==1.4.2",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.11.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.7",
    "lazy-loader==0.4",
    "librosa==0.10.1",
    "lit==18.1.8",
    "llvmlite==0.43.0",
    "lxml==5.3.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.0",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "nbclient==0.10.2",
    "nbconvert==7.16.5",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numba==0.60.0",
    "numpy==1.26.4",
    "nvidia-cublas-cu11==11.10.3.66",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu11==11.7.101",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu11==11.7.99",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu11==11.7.99",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu11==8.5.0.96",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu11==10.2.10.91",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu11==11.4.0.1",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu11==11.7.4.91",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu11==2.14.3",
    "nvidia-nccl-cu12==2.27.3",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvtx-cu11==11.7.91",
    "nvidia-nvtx-cu12==12.8.90",
    "omegaconf==2.3.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.4.0",
    "pooch==1.8.2",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.1",
    "protobuf==4.25.8",
    "psutil==5.9.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==18.1.0",
    "pycparser==2.22",
    "pycryptodomex==3.21.0",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyerfa==2.0.1.5",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pytz==2024.2",
    "pyyaml==6.0.3",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "regex==2024.11.6",
    "regions==0.8",
    "requests==2.32.5",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.22.3",
    "sacremoses==0.1.1",
    "safetensors==0.5.2",
    "scikit-learn==1.4.0",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "send2trash==1.8.3",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.39.0",
    "setproctitle==1.3.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soundfile==0.13.0",
    "soupsieve==2.6",
    "sox==1.5.0",
    "soxr==0.5.0.post1",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tiktoken==0.8.0",
    "tinycss2==1.4.0",
    "tokenizers==0.22.1",
    "tomli==2.2.1",
    "torch==2.8.0",
    "torchao==0.10.0",
    "torchaudio==2.8.0",
    "torcheval==0.0.7",
    "torchsummary==1.5.1",
    "torchtune==0.4.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.57.1",
    "triton==3.4.0",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2024.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "wandb==0.16.2",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.13",
    "xxhash==3.5.0",
    "yarl==1.18.3",
    "yellowbrick==1.5",
    "zipp==3.21.0",
]
